# surveillance-platform

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: security.yml  test.yml
bruno/: bruno.json
bruno/Audit log/: List audit log.bru
bruno/Auth/: Login.bru  Logout.bru  Refresh.bru
bruno/Cameras/: Delete a camera.bru  Get a camera.bru  List cameras.bru  List tracks for a camera.bru  Register a camera.bru  Start streaming.bru  Stop streaming.bru  Update a camera.bru
bruno/Events/: Get an event.bru  List events.bru  Stream sightings (SSE).bru
bruno/Health/: Health check.bru
bruno/Identities/: Delete an identity.bru  Get an identity.bru  List identities.bru  List sightings for an identity.bru  Merge identities.bru  Split a track into a new identity.bru
bruno/Map/: List map activity.bru  List map cameras.bru
bruno/Operators/: Create an operator.bru  Deactivate an operator.bru  List operators.bru
bruno/Tracks & detections/: Get a track.bru  List detections for a track.bru
bruno/environments/: Local.bru
docs/: API_SPEC.md  ARCHITECTURE.md  CODING_STANDARDS.md  DECISIONS.md  GAPS.md  PRD.md  TESTING.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  AuditLogPage.tsx  CamerasPage.tsx  IdentitiesPage.tsx  LiveFeed.tsx  Login.tsx  (+7 more)
postman/: surveillance-platform.postman_collection.json
services/retention/: Dockerfile  pyproject.toml
services/retention/retention/: gc.py  main.py
services/retention/tests/: conftest.py  test_gc.py
tests/pipeline/: pyproject.toml  test_replay.py
(+29 files in other folders)
