[project]
name = "surveillance-pipeline-tests"
version = "0.1.0"
description = "Pipeline/replay tests (docs/TESTING.md layer 3): the real YOLO detector, BYTETracker, and ReID encoder run for real, not mocked (unlike services/*/tests, which mock the model deliberately per docs/TESTING.md §1)."
requires-python = ">=3.12"
dependencies = [
    "surveillance-common>=0.1.0",
    "surveillance-detection>=0.1.0",
    "surveillance-reid>=0.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv.sources]
surveillance-common = { path = "../../services/common", editable = true }
surveillance-detection = { path = "../../services/detection", editable = true }
surveillance-reid = { path = "../../services/reid", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
